--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
     <main>
       <section class="hero">
         <div class="hero-card">
-          <div class="kicker">Service local & fiable</div>
-          <h2>Travaux de maçonnerie de qualité — sécurité & savoir-faire</h2>
-          <p>Plus de 17 ans d’expérience dans la construction et la rénovation : murs, fondations, façades, terrassements et dallages.</p>
+          <div class="kicker">Service local & fiable: SIREN = 827712423</div>
+          <h2>Travaux de maçonnerie de qualité 
+            — sécurité & savoir-faire</h2>
+          <p>Plus de 17 ans d’expérience dans la construction et la rénovation : murs, fondations, façades, terrassements et dallages.
+            Inscrit sur les pages jaune : <a href="https://www.pagesjaunes.fr/pros/57086181"> Voir la page </a> </p>
           <p><a class="btn" href="#contact">Demander un devis</a></p>
         </div>
         <aside class="gallery"></aside>
