--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
       <section id="contact">
         <h2>Contact & Devis</h2>
         <div class="contact">
-          <form onsubmit="return handleSubmit(event)">
+          <form  action="https://formspree.io/f/mrbydgpl"
+                 method="POST">
             <label for="name">Nom / Société</label>
             <input id="name" name="name" placeholder="Votre nom" required>
 
@@ -119,7 +120,7 @@
             <h3>Informations</h3>
             <p class="muted">
               Russell Rosser Maçonnerie<br>
-              Email : <a href="mailto:mr.rosser.russell@orange.fr" style="color:var(--accent)">mr.rosser.russell@orange.fr</a><br>
+              Email : style="color:var(--accent) mr.rosser.russell@orange.fr</a><br>
               <br>
               <strong>Horaires :</strong><br>
               Lun–Ven : 8h–18h<br>
