--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h3>Informations</h3>
             <p class="muted">
               Russell Rosser Maçonnerie<br>
-              Email : style="color:var(--accent) mr.rosser.russell@orange.fr</a><br>
+              Email : mr.rosser.russell@orange.fr</a><br>
               <br>
               <strong>Horaires :</strong><br>
               Lun–Ven : 8h–18h<br>
