--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="google-site-verification" content="eu4KGkLoFW7nVRHguW1MimPat202q2feJ0DiFEuBtW0" />
   <title>Russell Rosser Maçonnerie — Maçon à votre service</title>
   <meta name="description" content="Russell Rosser Maçonnerie — Travaux de maçonnerie, rénovations, terrassements et construction de murs. Devis gratuit." />
   <meta name="theme-color" content="#0f172a">
