--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Russell Rosser Maçonnerie — Maçon à votre service</title>
   <meta name="description" content="Russell Rosser Maçonnerie — Travaux de maçonnerie, rénovations, terrassements et construction de murs. Devis gratuit." />
   <meta name="theme-color" content="#0f172a">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link href="favicon.png" rel="icon">
 
   <style>
     :root{
