--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             - Inscrit sur les pages jaune : <a href="https://www.pagesjaunes.fr/pros/57086181"> Voir la page </a> </p>
           <p><a class="btn" href="#contact">Demander un devis</a></p>
         </div>
-        <aside class="gallery"></aside>
+        <aside class="favicon.png"></aside>
       </section>
 
       <section id="services">
