--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     .kicker{color:var(--accent);font-weight:700;font-size:13px}
     .hero h2{margin:8px 0 12px;font-size:34px;line-height:1.1}
     .hero p{color:var(--muted);margin:0 0 18px}
-    .gallery{border-radius:12px;overflow:hidden;height:100%;background-image:url('https://images.unsplash.com/photo-1509395176047-4a66953fd231?auto=format&fit=crop&w=1200&q=60');background-size:cover;background-position:center}
+    .gallery{border-radius:12px;overflow:hidden;height:100%;background-image:url('favicon.png');background-size:cover;background-position:center}
 
     .services{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:18px;margin:28px 0}
     .service{background:linear-gradient(180deg,rgba(255,255,255,0.02),rgba(255,255,255,0.01));padding:18px;border-radius:12px;transition:transform .2s}
@@ -80,7 +80,7 @@
             - Inscrit sur les pages jaune : <a href="https://www.pagesjaunes.fr/pros/57086181"> Voir la page </a> </p>
           <p><a class="btn" href="#contact">Demander un devis</a></p>
         </div>
-        <aside class="favicon.png"></aside>
+        <aside class="gallery"></aside>
       </section>
 
       <section id="services">
