--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <link rel="shortcut icon" href="favicon.png" type="image/png">
   <link href="favicon.png" rel="icon">
 
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Russell Rosser Maçonnerie",
+  "url": "https://russellrossermaconnerie.github.io/"
+}
+  </script>
+  
   <style>
     :root{
       --bg:#0f172a; --card:#0b1220; --muted:#9aa4b2; --accent:#d97706; --accent-2:#f59e0b;
