--- a/index.html
+++ b/index.html
@@ -12,14 +12,43 @@
   <link href="favicon.png" rel="icon">
 
 
-  <script type="application/ld+json">
+<script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "WebSite",
+  "@type": "MasonryBusiness",
   "name": "Russell Rosser Maçonnerie",
-  "url": "https://russellrossermaconnerie.github.io/"
+  "image": "https://russellrossermaconnerie.github.io/favicon.png",
+  "url": "https://russellrossermaconnerie.github.io/",
+  "telephone": "+33623824682",
+  "priceRange": "$$",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Le Bourg",
+    "addressLocality": "Bréhan",
+    "postalCode": "56580",
+    "addressRegion": "Bretagne",
+    "addressCountry": "FR"
+  },
+  "geo": {
+    "@type": "GeoCoordinates",
+    "latitude": 48.0559, 
+    "longitude": -2.6865
+  },
+  "openingHoursSpecification": {
+    "@type": "OpeningHoursSpecification",
+    "dayOfWeek": [
+      "Monday",
+      "Tuesday",
+      "Wednesday",
+      "Thursday",
+      "Friday"
+    ],
+    "opens": "08:00",
+    "closes": "18:00"
+  }
 }
-  </script>
+</script>
+
   
   <style>
     :root{
